--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 gunicorn = "*"
+pytest-django = "*"
+pytest = "*"
+python-decouple = "*"
 
 [dev-packages]
 flake8 = "*"
