--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pytest-django = "*"
 pytest = "*"
 python-decouple = "*"
 dj-database-url = "*"
+psycopg2 = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 flake8 = "*"
