--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-decouple = "^3.8"
 psycopg2 = "^2.9.10"
 psycopg2-binary = "^2.9.10"
 django-s3-folder-storage = "^0.5"
+django-model-utils = "^5.0.0"
 
 
 [build-system]
